<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_mealHistory"
        android:icon="@drawable/mealhistory"
        android:title="@string/mealhistory"/>
        <item android:id="@+id/nav_Education"
            android:icon="@drawable/education"
            android:title="@string/Education"/>
        <item android:id="@+id/nav_TermsAndConditions"
            android:icon="@drawable/warning"
            android:title="@string/TermsAndConditions"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/Logout"/>
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share"
                android:icon="@drawable/logout"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/warning"
                android:title="Send"/>
        </menu>
    </item>
</menu>